--- a/css/styles.css
+++ b/css/styles.css
@@ -67,13 +67,37 @@ a {
     }
 }
 
-/* @media only screen and (max-device-width: 1600px) {
+@media only screen and (max-device-width: 1600px) {
 
     .bgimg-1 {
         background-attachment: scroll;
-        min-height: 600px;
+        min-height: 700px;
     }
-} */
+}
+
+@media only screen and (min-device-height: 700px) {
+
+    .bgimg-1 {
+        background-attachment: scroll;
+        min-height: 780px;
+    }
+}
+
+@media only screen and (min-device-height: 800px) {
+
+    .bgimg-1 {
+        background-attachment: scroll;
+        min-height: 900px;
+    }
+}
+
+@media only screen and (min-device-height: 900px) {
+
+    .bgimg-1 {
+        background-attachment: scroll;
+        min-height: 930px;
+    }
+}
 
 
 
@@ -118,6 +142,10 @@ a {
     color: #ffffff;
 }
 
-.w3-content{
+.w3-content {
     max-width: 1100px;
+}
+
+.shadowbox {
+    box-shadow: 0 -5px 5px -5px #333;
 }
